Notify LayoutImage that intrinsic dimensions changed when sizes changes

When the sizes attribute changes, that has the potential of modifying the
image's intrinsic dimensions. However, the LayoutImage object was not
notified of that explicitly. While the intrinsic dimensions were changed
when a new resource was downloaded as a result of the sizes attribute
change, that wasn't the case when such the resource was not changed.

This CL fixes that, by explicitly notifying the LayoutImage of the change.

BUG=639845

Review-Url: https://codereview.chromium.org/2292013002
Cr-Commit-Position: refs/heads/master@{#415369}

Former-commit-id: caccabc07cfb56d982d3933a5b938f190ee34ec4